--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@cognite/cogs.js": "^2.0.3",
     "@cognite/sdk": "^3.1.1",
     "@storybook/addon-knobs": "^6.0.22",
+    "@types/lodash": "^4.14.165",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
