--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "dist/types/src/index.d.ts",
   "scripts": {
     "build": "tsc --build && rollup -c ./rollup.config.js",
-    "storybook": "start-storybook -p 6006  --no-dll",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "commit": "npx git-cz",
     "precommit": "yarn lint --fix",
@@ -32,18 +32,14 @@
     "url": "https://github.com/cognitedata/react-picture-annotation/issues"
   },
   "homepage": "https://github.com/cognitedata/react-picture-annotation#readme",
-  "peerDependencies": {
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
     "@babel/plugin-transform-regenerator": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-alias": "^3.1.1",
@@ -53,20 +49,20 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.8",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "@storybook/addon-a11y": "^6.1.5",
-    "@storybook/addon-actions": "^6.1.0",
-    "@storybook/addon-docs": "^6.1.0",
-    "@storybook/addon-essentials": "^6.1.5",
+    "@storybook/addon-a11y": "^6.1.6",
+    "@storybook/addon-actions": "^6.1.6",
+    "@storybook/addon-docs": "^6.1.6",
+    "@storybook/addon-essentials": "^6.1.6",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.1.5",
-    "@storybook/addon-storysource": "^6.1.5",
-    "@storybook/addons": "^6.0.21",
-    "@storybook/react": "^6.1.5",
+    "@storybook/addon-links": "^6.1.6",
+    "@storybook/addon-storysource": "^6.1.6",
+    "@storybook/addons": "^6.1.6",
+    "@storybook/react": "^6.1.6",
     "@svgr/rollup": "^5.5.0",
     "@types/jest": "^26.0.14",
     "@types/pdfjs-dist": "^2.1.5",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.4",
     "babel-loader": "^8.2.1",
@@ -74,24 +70,25 @@
     "cz-conventional-changelog": "3.3.0",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
-    "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2",
-    "react": "^16.14.0",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "rollup": "^2.33.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-typescript2": "^0.29.0",
-    "semantic-release": "^17.2.3",
+    "semantic-release": "^17.3.0",
     "ts-jest": "^26.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0"
   },
   "dependencies": {
-    "@cognite/annotations": "^1.0.3",
-    "@cognite/cogs.js": "^2.0.3",
-    "@cognite/sdk": "^3.2.1",
-    "@storybook/addon-knobs": "^6.1.5",
+    "@cognite/annotations": "^1.1.0",
+    "@cognite/cogs.js": "^2.4.2",
+    "@cognite/sdk": "^3.3.0",
+    "@storybook/addon-knobs": "^6.1.6",
     "@types/lodash": "^4.14.165",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
