--- a/package.json
+++ b/package.json
@@ -93,12 +93,14 @@
     "@cognite/sdk": "^3.2.0",
     "@storybook/addon-knobs": "^6.0.22",
     "@types/lodash": "^4.14.165",
+    "@types/react-splitter-layout": "^3.0.0",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
     "react-draggable": "^4.4.3",
     "react-is": "^17.0.1",
+    "react-splitter-layout": "^4.0.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
