--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cognite/react-picture-annotation",
-  "version": "1.13.0",
+  "version": "1.13.1",
   "description": "A simple pdf/image annotation component.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -82,11 +82,11 @@
     "ts-jest": "^26.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^5.0.0"
+    "tslint-react": "^5.0.0",
+    "@cognite/cogs.js": "^2.4.2"
   },
   "dependencies": {
     "@cognite/annotations": "^1.1.0",
-    "@cognite/cogs.js": "^2.4.2",
     "@cognite/sdk": "^3.3.0",
     "@storybook/addon-knobs": "^6.1.10",
     "@types/lodash": "^4.14.165",
@@ -102,6 +102,9 @@
     "styled-components": "^5.2.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.0"
+  },
+  "peerDependencies": {
+    "@cognite/cogs.js": "^2.4.2"
   },
   "config": {
     "commitizen": {
