--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-draggable": "^4.4.3",
     "react-is": "^17.0.1",
     "react-splitter-layout": "^4.0.0",
+    "react-tiny-popover": "^6.0.5",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0",
     "typescript": "^4.1.2",
