--- a/package.json
+++ b/package.json
@@ -90,8 +90,10 @@
     "@cognite/sdk": "^3.3.0",
     "@storybook/addon-knobs": "^6.1.10",
     "@types/lodash": "^4.14.165",
+    "@types/lz-string": "^1.3.34",
     "@types/react-canvas-draw": "^1.1.0",
     "@types/react-splitter-layout": "^3.0.0",
+    "lz-string": "^1.4.4",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
