--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@cognite/cogs.js": "^2.4.2",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-alias": "^3.1.1",
@@ -73,8 +74,8 @@
     "lint-staged": "^10.5.2",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^17.0.1",
     "rollup": "^2.34.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-typescript2": "^0.29.0",
@@ -82,8 +83,7 @@
     "ts-jest": "^26.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^5.0.0",
-    "@cognite/cogs.js": "^2.4.2"
+    "tslint-react": "^5.0.0"
   },
   "dependencies": {
     "@cognite/annotations": "^1.1.0",
@@ -91,6 +91,7 @@
     "@storybook/addon-knobs": "^6.1.10",
     "@types/lodash": "^4.14.165",
     "@types/react-splitter-layout": "^3.0.0",
+    "lodash": "^4.17.21",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
