--- a/package.json
+++ b/package.json
@@ -97,12 +97,9 @@
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
-    "react-draggable": "^4.4.3",
     "react-is": "^17.0.1",
     "react-splitter-layout": "^4.0.0",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.2.0",
-    "uuid": "^8.3.0"
+    "styled-components": "^5.2.0"
   },
   "peerDependencies": {
     "@cognite/cogs.js": "^2.4.2"
