--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@cognite/cogs.js": "^2.4.2",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-alias": "^3.1.1",
@@ -54,15 +55,18 @@
     "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-knobs": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-storysource": "^6.1.10",
     "@storybook/addons": "^6.1.10",
     "@storybook/react": "^6.1.10",
     "@svgr/rollup": "^5.5.0",
     "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.165",
     "@types/pdfjs-dist": "^2.1.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-splitter-layout": "^3.0.0",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.4",
     "babel-loader": "^8.2.2",
@@ -73,8 +77,8 @@
     "lint-staged": "^10.5.2",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^17.0.1",
     "rollup": "^2.34.2",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-typescript2": "^0.29.0",
@@ -83,25 +87,19 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^5.0.0",
-    "@cognite/cogs.js": "^2.4.2"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@cognite/annotations": "^1.1.0",
     "@cognite/sdk": "^3.3.0",
-    "@storybook/addon-knobs": "^6.1.10",
-    "@types/lodash": "^4.14.165",
-    "@types/react-splitter-layout": "^3.0.0",
+    "lodash": "^4.17.21",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
-    "react-draggable": "^4.4.3",
     "react-is": "^17.0.1",
     "react-splitter-layout": "^4.0.0",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.2.0",
-    "typescript": "^4.1.2",
-    "uuid": "^8.3.0"
+    "styled-components": "^5.2.0"
   },
   "peerDependencies": {
     "@cognite/cogs.js": "^2.4.2"
