--- a/package.json
+++ b/package.json
@@ -86,9 +86,11 @@
     "tslint-react": "^5.0.0"
   },
   "dependencies": {
+    "@agadacz-cognite/react-canvas-draw": "^1.2.0",
     "@cognite/annotations": "^1.1.0",
     "@cognite/sdk": "^3.3.0",
     "@storybook/addon-knobs": "^6.1.10",
+    "@types/": "agadacz-cognite/react-canvas-draw",
     "@types/lodash": "^4.14.165",
     "@types/lz-string": "^1.3.34",
     "@types/react-canvas-draw": "^1.1.0",
@@ -98,7 +100,7 @@
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
-    "react-canvas-draw": "^1.1.1",
+    "react-canvas-draw": "github:agadacz-cognite/react-canvas-draw",
     "react-color": "^2.19.3",
     "react-color-palette": "^4.1.0",
     "react-draggable": "^4.4.3",
