refactor: converting tiff to jpeg

--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "@cognite/annotations": "^1.1.0",
     "@cognite/sdk": "^3.3.0",
     "base64-js": "^1.5.1",
+    "core-js": "^3.13.1",
+    "jimp": "^0.16.1",
     "lodash": "^4.17.21",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
