--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "typeRoots": ["node_modules/@types"],
     "declarationDir": "dist/types",
+    "types": [],
     "outDir": "dist/lib",
     "baseUrl": "src",
     "rootDirs": ["src", "stories"],
