--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@cognite/cogs.js": "^2.4.2",
+    "@cognite/cogs.js": "^3.13.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@rollup/plugin-alias": "^3.1.1",
@@ -55,18 +55,15 @@
     "@storybook/addon-docs": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-knobs": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/addon-storysource": "^6.1.10",
     "@storybook/addons": "^6.1.10",
     "@storybook/react": "^6.1.10",
     "@svgr/rollup": "^5.5.0",
     "@types/jest": "^26.0.14",
-    "@types/lodash": "^4.14.165",
     "@types/pdfjs-dist": "^2.1.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-splitter-layout": "^3.0.0",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.4",
     "babel-loader": "^8.2.2",
@@ -86,20 +83,34 @@
     "ts-jest": "^26.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^5.0.0",
-    "typescript": "^4.1.2"
+    "tslint-react": "^5.0.0"
   },
   "dependencies": {
+    "@agadacz-cognite/react-canvas-draw": "^1.2.0",
     "@cognite/annotations": "^1.1.0",
     "@cognite/sdk": "^3.3.0",
-    "lodash": "^4.17.21",
+    "@storybook/addon-knobs": "^6.1.10",
+    "@types/": "agadacz-cognite/react-canvas-draw",
+    "@types/lodash": "^4.14.165",
+    "@types/lz-string": "^1.3.34",
+    "@types/react-canvas-draw": "^1.1.0",
+    "@types/react-splitter-layout": "^3.0.0",
+    "lz-string": "^1.4.4",
     "parse-color": "^1.0.0",
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
+    "react-canvas-draw": "github:agadacz-cognite/react-canvas-draw",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^4.1.0",
+    "react-draggable": "^4.4.3",
     "react-is": "^17.0.1",
     "react-splitter-layout": "^4.0.0",
-    "styled-components": "^5.2.0"
+    "react-tiny-popover": "^6.0.5",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.2.0",
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.0"
   },
   "peerDependencies": {
     "@cognite/cogs.js": "^2.4.2"
