chore: branch beta set up to prerelease

--- a/package.json
+++ b/package.json
@@ -143,7 +143,11 @@
   },
   "release": {
     "branches": [
-      "master"
+      "master",
+      {
+        "name": "beta",
+        "prerelease": true
+      }
     ],
     "plugins": [
       [
