--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "tslint-react": "^5.0.0"
   },
   "dependencies": {
-    "@agadacz-cognite/react-canvas-draw": "^1.2.0",
     "@cognite/annotations": "^1.1.0",
     "@cognite/sdk": "^3.3.0",
     "@storybook/addon-knobs": "^6.1.10",
@@ -99,7 +98,7 @@
     "pdf-lib": "^1.12.0",
     "pdfjs-dist": "2.6.347",
     "react-archer": "^3.0.0",
-    "react-canvas-draw": "github:agadacz-cognite/react-canvas-draw",
+    "react-canvas-draw": "^1.1.1",
     "react-color": "^2.19.3",
     "react-color-palette": "^4.1.0",
     "react-draggable": "^4.4.3",
